[package]
name = "proxy-scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.1.0"
regex = "1.10.2"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
uriparse = "0.6.4"
url = "2.5.0"
