[package]
name = "proxy-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
description = "A Rust command-line tool for scraping proxy information."
homepage = "https://github.com/zolagonano/proxy_scraper.git"
repository = "https://github.com/zolagonano/proxy_scraper.git"
keywords = ["proxy", "scraper", "rust", "tokio"]
categories = ["command-line-utilities", "parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/proxy-scraper/"

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
regex = "1.10.2"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
