[package]
name = "proxy-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
description = "A Rust command-line tool for scraping proxy information."
homepage = "https://github.com/zolagonano/proxy_scraper.git"
repository = "https://github.com/zolagonano/proxy_scraper.git"
keywords = ["proxy", "scraper", "rust", "tokio"]
categories = ["command-line-utilities", "parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/proxy-scraper/"

[features]
default = ["dep:argh", "dep:reqwest", "dep:tokio"]
scraper = []

[lib]
name = "proxy_scraper"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = {version = "0.1.12", optional = true }
base64 = "0.22.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", optional = true}
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.35.1", features = ["full"] , optional = true}
url = "2.5.0"
